--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-01 Mon 19:00]
+#+CAPTION: Clock summary at [2019-04-02 Tue 10:54]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *41:53* |       |       | 100.0 |
+| *Total time*                                              | *44:16* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 41:53   |       |       | 100.0 |
-| Active                                                    |         | 41:53 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  1:47 |   4.3 |
-| Sprint and product backlog grooming                       |         |       |  6:11 |  14.8 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   7.6 |
-| Fix issues with emacs                                     |         |       |  2:42 |   6.4 |
-| Create a basic "project plan"                             |         |       |  2:08 |   5.1 |
-| Simplify qualified name                                   |         |       |  3:39 |   8.7 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |  17.6 |
-| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.9 |
-| Promote extraction entities to meta-model elements        |         |       | 13:14 |  31.6 |
-| Move all utility formatters from extraction to generation |         |       |  0:27 |   1.1 |
+| Stories                                                   | 44:16   |       |       | 100.0 |
+| Active                                                    |         | 44:16 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  1:47 |   4.0 |
+| Sprint and product backlog grooming                       |         |       |  6:34 |  14.8 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   7.2 |
+| Fix issues with emacs                                     |         |       |  2:42 |   6.1 |
+| Create a basic "project plan"                             |         |       |  2:08 |   4.8 |
+| Simplify qualified name                                   |         |       |  3:39 |   8.2 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  16.6 |
+| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.7 |
+| Integrate report-ci with dogen                            |         |       |  2:00 |   4.5 |
+| Promote extraction entities to meta-model elements        |         |       | 13:14 |  29.9 |
+| Move all utility formatters from extraction to generation |         |       |  0:27 |   1.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -146,6 +147,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-04-02 Tue 10:30]--[2019-04-02 Tue 10:53] =>  0:23
     CLOCK: [2019-03-31 Sun 09:50]--[2019-03-31 Sun 10:23] =>  0:33
     CLOCK: [2019-03-29 Fri 17:29]--[2019-03-29 Fri 17:38] =>  0:09
     CLOCK: [2019-03-29 Fri 17:17]--[2019-03-29 Fri 17:28] =>  0:11
@@ -321,6 +323,18 @@ be achieved via dynamic extensions: we could provide a meta-data
 parameter for each facet such as "generation type", manual or
 automatic. This can be done once we get rid of the current use of
 generation types for full/partial/no generation.
+
+*** STARTED Integrate report-ci with dogen                            :story:
+    :LOGBOOK:
+    CLOCK: [2019-04-02 Tue 10:19]--[2019-04-02 Tue 10:29] =>  0:10
+    CLOCK: [2019-04-02 Tue 10:09]--[2019-04-02 Tue 10:18] =>  0:09
+    CLOCK: [2019-04-02 Tue 09:07]--[2019-04-02 Tue 10:08] =>  1:01
+    CLOCK: [2019-04-02 Tue 08:54]--[2019-04-02 Tue 09:06] =>  0:12
+    CLOCK: [2019-04-02 Tue 08:25]--[2019-04-02 Tue 08:53] =>  0:28
+    :END:
+
+It seems Klemens has started a new project for a CI product. He
+submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
