--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-02 Tue 17:25]
+#+CAPTION: Clock summary at [2019-04-02 Tue 17:56]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *48:23* |       |       | 100.0 |
+| *Total time*                                              | *48:52* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 48:23   |       |       | 100.0 |
-| Active                                                    |         | 48:23 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  1:47 |   3.7 |
-| Sprint and product backlog grooming                       |         |       |  6:34 |  13.6 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   6.6 |
-| Fix issues with emacs                                     |         |       |  2:42 |   5.6 |
+| Stories                                                   | 48:52   |       |       | 100.0 |
+| Active                                                    |         | 48:52 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  1:47 |   3.6 |
+| Sprint and product backlog grooming                       |         |       |  6:34 |  13.4 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   6.5 |
+| Fix issues with emacs                                     |         |       |  2:42 |   5.5 |
 | Create a basic "project plan"                             |         |       |  2:08 |   4.4 |
 | Simplify qualified name                                   |         |       |  3:39 |   7.5 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |  15.2 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  15.1 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   2.5 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   4.4 |
-| Promote extraction entities to meta-model elements        |         |       | 17:12 |  35.5 |
+| Promote extraction entities to meta-model elements        |         |       | 17:41 |  36.2 |
 | Move all utility formatters from extraction to generation |         |       |  0:27 |   0.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -339,6 +339,7 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-02 Tue 17:26]--[2019-04-02 Tue 17:55] =>  0:29
     CLOCK: [2019-04-02 Tue 14:20]--[2019-04-02 Tue 17:25] =>  3:05
     CLOCK: [2019-04-02 Tue 11:04]--[2019-04-02 Tue 11:57] =>  0:53
     CLOCK: [2019-04-01 Mon 18:25]--[2019-04-01 Mon 19:00] =>  0:35
