--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-03 Wed 12:06]
+#+CAPTION: Clock summary at [2019-04-03 Wed 14:20]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *53:03* |       |       | 100.0 |
+| *Total time*                                              | *53:56* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 53:03   |       |       | 100.0 |
-| Active                                                    |         | 53:03 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  1:47 |   3.4 |
-| Sprint and product backlog grooming                       |         |       |  6:34 |  12.4 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   6.0 |
-| Fix issues with emacs                                     |         |       |  2:42 |   5.1 |
+| Stories                                                   | 53:56   |       |       | 100.0 |
+| Active                                                    |         | 53:56 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  1:47 |   3.3 |
+| Sprint and product backlog grooming                       |         |       |  6:34 |  12.2 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   5.9 |
+| Fix issues with emacs                                     |         |       |  2:42 |   5.0 |
 | Create a basic "project plan"                             |         |       |  2:08 |   4.0 |
-| Simplify qualified name                                   |         |       |  3:39 |   6.9 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |  13.9 |
-| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.3 |
-| Integrate report-ci with dogen                            |         |       |  2:09 |   4.1 |
-| Promote extraction entities to meta-model elements        |         |       | 21:52 |  41.2 |
+| Simplify qualified name                                   |         |       |  3:39 |   6.8 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  13.7 |
+| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.2 |
+| Integrate report-ci with dogen                            |         |       |  2:09 |   4.0 |
+| Promote extraction entities to meta-model elements        |         |       | 22:45 |  42.2 |
 | Move all utility formatters from extraction to generation |         |       |  0:27 |   0.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -339,6 +339,8 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-03 Wed 13:45]--[2019-04-03 Wed 14:20] =>  0:35
+    CLOCK: [2019-04-03 Wed 13:01]--[2019-04-03 Wed 13:19] =>  0:18
     CLOCK: [2019-04-03 Wed 08:51]--[2019-04-03 Wed 12:06] =>  3:15
     CLOCK: [2019-04-02 Tue 18:25]--[2019-04-02 Tue 19:21] =>  0:56
     CLOCK: [2019-04-02 Tue 17:26]--[2019-04-02 Tue 17:55] =>  0:29
@@ -561,6 +563,16 @@ It is *very important* to understand that this is the decoration of
 the output of the stitch template *itself*, not of the code it will
 generate. The decoration of the generated code will be handled as at
 present, by manually calling the decoration formatters.
+
+Notes:
+
+- we also need to split out the includes from the template. At present
+  it makes sense to supply it as a stitch KVP but in reality these are
+  parameters that should be inferred from the model. What we need is a
+  way to supply include dependencies in the meta-data. Then use that
+  information to build the include dependencies within
+  generation. Then use the list of includes to build the
+  boilerplate. The stitch template is just the core of the file.
 
 *** Create a tests stereotype with profiles                           :story:
 
