--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-03 Wed 15:35]
+#+CAPTION: Clock summary at [2019-04-03 Wed 17:29]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *55:09* |       |       | 100.0 |
+| *Total time*                                              | *57:01* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 55:09   |       |       | 100.0 |
-| Active                                                    |         | 55:09 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  1:47 |   3.2 |
-| Sprint and product backlog grooming                       |         |       |  6:34 |  11.9 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   5.8 |
-| Fix issues with emacs                                     |         |       |  2:42 |   4.9 |
-| Create a basic "project plan"                             |         |       |  2:08 |   3.9 |
-| Simplify qualified name                                   |         |       |  3:39 |   6.6 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |  13.4 |
-| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.2 |
-| Integrate report-ci with dogen                            |         |       |  2:09 |   3.9 |
-| Promote extraction entities to meta-model elements        |         |       | 23:58 |  43.5 |
+| Stories                                                   | 57:01   |       |       | 100.0 |
+| Active                                                    |         | 57:01 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  1:47 |   3.1 |
+| Sprint and product backlog grooming                       |         |       |  6:34 |  11.5 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   5.6 |
+| Fix issues with emacs                                     |         |       |  2:42 |   4.7 |
+| Create a basic "project plan"                             |         |       |  2:08 |   3.7 |
+| Simplify qualified name                                   |         |       |  3:39 |   6.4 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  12.9 |
+| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.1 |
+| Integrate report-ci with dogen                            |         |       |  2:09 |   3.8 |
+| Promote extraction entities to meta-model elements        |         |       | 25:50 |  45.3 |
 | Move all utility formatters from extraction to generation |         |       |  0:27 |   0.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -339,6 +339,8 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-03 Wed 17:08]--[2019-04-03 Wed 17:29] =>  0:21
+    CLOCK: [2019-04-03 Wed 15:36]--[2019-04-03 Wed 17:07] =>  1:31
     CLOCK: [2019-04-03 Wed 14:35]--[2019-04-03 Wed 15:35] =>  1:00
     CLOCK: [2019-04-03 Wed 14:21]--[2019-04-03 Wed 14:34] =>  0:13
     CLOCK: [2019-04-03 Wed 13:45]--[2019-04-03 Wed 14:20] =>  0:35
