--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-03 Wed 17:57]
+#+CAPTION: Clock summary at [2019-04-04 Thu 14:12]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *57:28* |       |       | 100.0 |
+| *Total time*                                              | *61:31* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 57:28   |       |       | 100.0 |
-| Active                                                    |         | 57:28 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  1:47 |   3.1 |
-| Sprint and product backlog grooming                       |         |       |  6:34 |  11.4 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   5.5 |
-| Fix issues with emacs                                     |         |       |  2:42 |   4.7 |
-| Create a basic "project plan"                             |         |       |  2:08 |   3.7 |
-| Simplify qualified name                                   |         |       |  3:39 |   6.4 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |  12.8 |
-| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.1 |
-| Integrate report-ci with dogen                            |         |       |  2:09 |   3.7 |
-| Promote extraction entities to meta-model elements        |         |       | 26:17 |  45.7 |
-| Move all utility formatters from extraction to generation |         |       |  0:27 |   0.8 |
+| Stories                                                   | 61:31   |       |       | 100.0 |
+| Active                                                    |         | 61:31 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  1:47 |   2.9 |
+| Sprint and product backlog grooming                       |         |       |  6:34 |  10.7 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   5.2 |
+| Fix issues with emacs                                     |         |       |  2:42 |   4.4 |
+| Create a basic "project plan"                             |         |       |  2:08 |   3.5 |
+| Simplify qualified name                                   |         |       |  3:39 |   5.9 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  12.0 |
+| Add intrinsic technical space ownership                   |         |       |  1:12 |   2.0 |
+| Integrate report-ci with dogen                            |         |       |  2:09 |   3.5 |
+| Promote extraction entities to meta-model elements        |         |       | 30:20 |  49.3 |
+| Move all utility formatters from extraction to generation |         |       |  0:27 |   0.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -339,6 +339,8 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-04 Thu 13:18]--[2019-04-04 Thu 14:12] =>  0:54
+    CLOCK: [2019-04-04 Thu 09:01]--[2019-04-04 Thu 12:10] =>  3:09
     CLOCK: [2019-04-03 Wed 17:30]--[2019-04-03 Wed 17:57] =>  0:27
     CLOCK: [2019-04-03 Wed 17:08]--[2019-04-03 Wed 17:29] =>  0:21
     CLOCK: [2019-04-03 Wed 15:36]--[2019-04-03 Wed 17:07] =>  1:31
@@ -479,6 +481,41 @@ We should also allow for both:
 We need to move all formatters into generation and update templates to
 point to new location. This must be done after decoration has been
 updated to use the new modeling elements.
+
+*** Duplicate elements in model                                       :story:
+
+Whilst running queries on postgres against a model dumped in tracing,
+we found evidence of duplicate elements. Query:
+
+: select jsonb_pretty(
+:           jsonb_array_elements(
+:           jsonb_array_elements(data)->'elements')->'data'->'__parent_0__'->'name'->'qualified'->'dot'
+:       )
+: from traces;
+
+Snippet of results after =sort | uniq -c=
+
+:      1  "masd.dogen.generation.csharp"
+:      1  "masd.dogen.generation.csharp.all"
+:      1  "masd.dogen.generation.csharp.CMakeLists"
+:      1  "masd.dogen.generation.csharp.entry_point"
+:      1  "masd.dogen.generation.csharp.fabric"
+:      2  "masd.dogen.generation.csharp.fabric.assembly_info"
+:      2  "masd.dogen.generation.csharp.fabric.assembly_info_factory"
+:      2  "masd.dogen.generation.csharp.fabric.assistant"
+:      2  "masd.dogen.generation.csharp.fabric.assistant_factory"
+:      2  "masd.dogen.generation.csharp.fabric.decoration_expander"
+:      2  "masd.dogen.generation.csharp.fabric.dynamic_transform"
+:      2  "masd.dogen.generation.csharp.fabric.element_visitor"
+:      2  "masd.dogen.generation.csharp.fabric.initializer"
+:      2  "masd.dogen.generation.csharp.fabric.injector"
+:      2  "masd.dogen.generation.csharp.fabric.meta_name_factory"
+:      2  "masd.dogen.generation.csharp.fabric.traits"
+:      2  "masd.dogen.generation.csharp.fabric.visual_studio_configuration"
+:      2  "masd.dogen.generation.csharp.fabric.visual_studio_factory"
+
+We need to investigate the generation pipeline to understand where
+this is coming from.
 
 *** Consider renaming orchestration to "engine"                       :story:
 
