--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-05 Fri 10:01]
+#+CAPTION: Clock summary at [2019-04-05 Fri 10:07]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *64:38* |       |       | 100.0 |
+| *Total time*                                              | *64:43* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 64:38   |       |       | 100.0 |
-| Active                                                    |         | 64:38 |       | 100.0 |
+| Stories                                                   | 64:43   |       |       | 100.0 |
+| Active                                                    |         | 64:43 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.8 |
 | Sprint and product backlog grooming                       |         |       |  7:07 |  11.0 |
 | Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.9 |
@@ -29,10 +29,10 @@
 | Rename "language" to "technical space"                    |         |       |  7:22 |  11.4 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.9 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   3.3 |
-| Promote extraction entities to meta-model elements        |         |       | 30:56 |  47.9 |
+| Promote extraction entities to meta-model elements        |         |       | 30:56 |  47.8 |
 | Move all utility formatters from extraction to generation |         |       |  0:27 |   0.7 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   2.0 |
-| Supply decorations as a sttich parameter                  |         |       |  0:41 |   1.1 |
+| Supply decorations as a sttich parameter                  |         |       |  0:46 |   1.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -515,6 +515,7 @@ includes with model elements. This is captured as a separate story.
 
 *** STARTED Supply decorations as a sttich parameter                  :story:
      :LOGBOOK:
+     CLOCK: [2019-04-05 Fri 10:02]--[2019-04-05 Fri 10:07] =>  0:05
      CLOCK: [2019-04-05 Fri 09:20]--[2019-04-05 Fri 10:01] =>  0:41
      :END:
 
